Readme file added and some small changes